added about information

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -88,9 +88,18 @@ color: #474747;
     margin-bottom: 20px;
 }
 /* main section style */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+
+}
 
 /* about section style */
 .about{
     padding: 130px;
     margin: 130px;
+}
+.about-info-container {
+    display: flex;
+    justify-content:space-around;
 }
