--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,11 +93,15 @@ main{
   margin: 0 auto;
 
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about section style */
 .about{
-    padding: 130px;
+    padding: 150px;
     margin: 130px;
+    background-color: antiquewhite;
 }
 .about-info-container {
     display: flex;
@@ -108,4 +112,26 @@ main{
 }
 #what-i-do-description {
     padding: 30px 150px ;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #fff8f3;
+    box-shadow: 0px 6px 50px opx rgba(0,0,0,0.06);
+
+}
+.skill-description{
+    color: #757575;
+}
+
+/* resume section style */
+.resume-column-title{
+color: #474747;
+font-size: 30px;
+font-weight: 700;
+
 }
