--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -169,8 +169,29 @@ margin-bottom: 10px;
 /* footer style */
 footer{
     display: flex;
+    gap: 100px;
     background-color: #fff8f3;
     margin-top: 100px;
     padding: 130px 200px;
 
 }
+.footer-column{
+    width: 50%;
+
+}
+.social-link a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"], .contact input[type=email],
+ textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #fff8f3;
+    border: 0;
+    width: 100%;
+}
+.contact input
